@@ -4,7 +4,7 @@ import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.SecretKeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64; 
 
 public class PasswordStorage
 {
@@ -190,12 +190,12 @@ public class PasswordStorage
     private static byte[] fromBase64(String hex)
         throws IllegalArgumentException
     {
-        return DatatypeConverter.parseBase64Binary(hex);
+        return Base64.getDecoder().decode(hex);
     }
 
     private static String toBase64(byte[] array)
     {
-        return DatatypeConverter.printBase64Binary(array);
+        return Base64.getEncoder().encodeToString(array);
     }
 
 }
